[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/text20bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/text20.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/scene/UI/OptionContainer.gd" type="Script" id=3]
[ext_resource path="res://assets/img/UI/MENU_BOX_1.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/text16.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/img/UI/BOX_EQUIP_2.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 19.0
bg_color = Color( 0.533333, 0.25098, 0.152941, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_top = 7.0
expand_margin_bottom = 7.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.666667, 0.654902, 0.654902, 1 )
border_color = Color( 0.666667, 0.654902, 0.654902, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 12.0
expand_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
corner_radius_top_left = 6
corner_radius_bottom_left = 6
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="Theme" id=4]

[node name="OptionContainer" type="Control"]
margin_left = 303.0
margin_right = 303.0
margin_bottom = 600.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 33.0
margin_right = 799.0
margin_bottom = 556.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 70.0
margin_top = 84.6531
margin_right = 760.0
margin_bottom = 510.653
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicTag" type="Label" parent="VBoxContainer"]
margin_right = 690.0
margin_bottom = 28.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
text = "Volume"

[node name="BGM" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 690.0
margin_bottom = 102.0
custom_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/BGM"]
margin_right = 690.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="VBoxContainer/BGM/HBoxContainer2"]
margin_right = 45.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
text = "BGM"

[node name="Volume" type="Label" parent="VBoxContainer/BGM/HBoxContainer2"]
margin_left = 49.0
margin_right = 649.0
margin_bottom = 28.0
rect_min_size = Vector2( 600, 0 )
custom_fonts/font = ExtResource( 2 )
text = "100%"
align = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/BGM"]
margin_top = 38.0
margin_right = 690.0
margin_bottom = 54.0
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
value = 100.0

[node name="SFX" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 690.0
margin_bottom = 176.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SFX"]
margin_right = 690.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="VBoxContainer/SFX/HBoxContainer"]
margin_right = 45.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
text = "SFX"

[node name="Volume" type="Label" parent="VBoxContainer/SFX/HBoxContainer"]
margin_left = 49.0
margin_right = 649.0
margin_bottom = 28.0
rect_min_size = Vector2( 600, 0 )
custom_fonts/font = ExtResource( 2 )
text = "100%"
align = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/SFX"]
margin_top = 38.0
margin_right = 690.0
margin_bottom = 54.0
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
value = 100.0

[node name="Margin" type="Label" parent="VBoxContainer"]
margin_top = 196.0
margin_right = 690.0
margin_bottom = 210.0

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 230.0
margin_right = 690.0
margin_bottom = 258.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
text = "Other"

[node name="Other" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 278.0
margin_right = 690.0
margin_bottom = 318.0

[node name="FPS" type="CheckButton" parent="VBoxContainer/Other"]
margin_right = 141.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
custom_constants/hseparation = 10
pressed = true
text = "FPS :"

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 338.0
margin_right = 690.0
margin_bottom = 366.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
text = "Save/To Main Menu"

[node name="Save" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 386.0
margin_right = 690.0
margin_bottom = 426.0
custom_constants/separation = 40
alignment = 2

[node name="Save" type="Button" parent="VBoxContainer/Save"]
margin_left = 370.0
margin_right = 470.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = ExtResource( 2 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="VBoxContainer/Save"]
margin_left = 510.0
margin_right = 690.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 40 )
custom_fonts/font = ExtResource( 2 )
text = "To Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="Control" parent="."]
visible = false
margin_left = 6.69043
margin_top = 183.839
margin_right = 499.69
margin_bottom = 355.839
theme = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ConfirmationDialog"]
margin_left = -519.997
margin_top = -319.427
margin_right = 980.003
margin_bottom = 680.573
rect_min_size = Vector2( 1500, 1000 )
color = Color( 0.478431, 0.478431, 0.478431, 0.811765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="ConfirmationDialog"]
margin_left = -18.0
margin_top = -50.0
margin_right = 510.0
margin_bottom = 238.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationDialog"]
visible = false
margin_left = 54.8638
margin_top = 2.72766
margin_right = 436.864
margin_bottom = 170.728
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfirmationDialog/VBoxContainer"]
margin_right = 382.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "To Main Menu"
align = 1

[node name="Label2" type="Label" parent="ConfirmationDialog/VBoxContainer"]
margin_top = 48.0
margin_right = 382.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 70 )
custom_fonts/font = ExtResource( 5 )
text = "Do you want to quit to the main menu? All data that has not been saved will be lost."
align = 3
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationDialog/VBoxContainer"]
margin_top = 140.0
margin_right = 382.0
margin_bottom = 168.0
custom_constants/separation = 15

[node name="Quit" type="Button" parent="ConfirmationDialog/VBoxContainer/HBoxContainer"]
margin_right = 117.0
margin_bottom = 28.0
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 5 )
text = "Quit"

[node name="QuitSave" type="Button" parent="ConfirmationDialog/VBoxContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 249.0
margin_bottom = 28.0
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 5 )
text = "Save & Quit"

[node name="Cancel" type="Button" parent="ConfirmationDialog/VBoxContainer/HBoxContainer"]
margin_left = 264.0
margin_right = 382.0
margin_bottom = 28.0
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 5 )
text = "Cancel"

[node name="VBoxContainer2" type="VBoxContainer" parent="ConfirmationDialog"]
visible = false
margin_left = 54.8638
margin_top = 2.72766
margin_right = 436.864
margin_bottom = 170.728
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfirmationDialog/VBoxContainer2"]
margin_right = 382.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "Overwrite Save Data"
align = 1

[node name="Label2" type="Label" parent="ConfirmationDialog/VBoxContainer2"]
margin_top = 48.0
margin_right = 382.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 70 )
custom_fonts/font = ExtResource( 5 )
text = "The action taken will overwrite the old save with the new save. Are you sure?"
align = 3
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationDialog/VBoxContainer2"]
margin_top = 138.0
margin_right = 382.0
margin_bottom = 166.0
custom_constants/separation = 15

[node name="Overwrite" type="Button" parent="ConfirmationDialog/VBoxContainer2/HBoxContainer"]
margin_right = 183.0
margin_bottom = 28.0
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 5 )
text = "Overwrite"

[node name="Cancel" type="Button" parent="ConfirmationDialog/VBoxContainer2/HBoxContainer"]
margin_left = 198.0
margin_right = 382.0
margin_bottom = 28.0
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 5 )
text = "Cancel"
[connection signal="value_changed" from="VBoxContainer/BGM/HSlider" to="." method="_on_BGMSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFX/HSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="toggled" from="VBoxContainer/Other/FPS" to="." method="_on_FPS_toggled"]
[connection signal="pressed" from="VBoxContainer/Save/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer/Save/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="ConfirmationDialog/VBoxContainer/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="ConfirmationDialog/VBoxContainer/HBoxContainer/QuitSave" to="." method="_on_QuitSave_pressed"]
[connection signal="pressed" from="ConfirmationDialog/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="ConfirmationDialog/VBoxContainer2/HBoxContainer/Overwrite" to="." method="_on_Overwrite_pressed"]
[connection signal="pressed" from="ConfirmationDialog/VBoxContainer2/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
